--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "electron-react-boilerplate",
-  "version": "0.18.1",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "name": "subnet-calculator",
+  "productName": "subnet-calculator",
+  "version": "1.0.0",
+  "description": "Subnet mask calculation application",
   "main": "./main.prod.js",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "tranphuquy19",
+    "email": "tranphuquy19@gmail.com",
+    "url": "https://github.com/tranphuquy19/electron-react-subnet-mask-calculator"
   },
   "scripts": {
     "electron-rebuild": "node -r ../internals/scripts/BabelRegister.js ../internals/scripts/ElectronRebuild.js",
