--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@hot-loader/react-dom": "^16.11.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.5.0",
     "devtron": "^1.4.0",
     "electron-debug": "^3.0.1",
@@ -257,6 +258,7 @@
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-router": "^5.1.2",
