--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@hot-loader/react-dom": "^16.11.0",
+    "antd": "^3.26.6",
     "bootstrap": "^4.4.1",
     "core-js": "^3.5.0",
     "devtron": "^1.4.0",
@@ -257,6 +258,7 @@
     "electron-log": "^4.0.0",
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
