--- a/package.json
+++ b/package.json
@@ -258,7 +258,9 @@
     "electron-log": "^4.0.0",
     "electron-updater": "^4.2.0",
     "history": "^4.10.1",
+    "ip-subnet-calculator": "^1.1.8",
     "jquery": "^3.4.1",
+    "netmask": "^1.0.6",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
